@@ -103,10 +103,10 @@ static int		get_dirlist	(CalcHandle* handle, GNode** vars, GNode** apps)
 	TreeInfo *ti;
 	int err;
 	GNode *root, *folder = NULL;
-	char fldname[40];
 	char varname[40];
 	uint32_t varsize;
-	char *u1, *u2;
+	uint8_t vartype;
+	int i;
 
 	(*apps) = g_node_new(NULL);
 	ti = (TreeInfo *)g_malloc(sizeof(TreeInfo));
@@ -134,35 +134,86 @@ static int		get_dirlist	(CalcHandle* handle, GNode** vars, GNode** apps)
 		GNode *node;
 
 		TRYF(cmd_s_dir_enum_next(handle));
-		err = cmd_r_dir_enum_next(handle, NULL, fldname, &varsize);
+		err = cmd_r_dir_enum_next(handle, varname, &varsize, &vartype);
 
 		if (err == ERR_EOT)
 			break;
 		else if (err != 0)
 			return err;
 
-		printf("varname = <%s>\n", fldname);
+		printf("varname = <%s>\n", varname);
 		
-		strcpy(fe->folder, fldname);
-		strcpy(fe->name, fldname);
-		fe->size = 0;
-		fe->type = 0;
+		strcpy(fe->folder, varname);
+		strcpy(fe->name, varname);
+		fe->size = varsize;
+		fe->type = vartype;
 		fe->attr = ATTRB_NONE;
 
 		node = g_node_new(fe);
 		folder = g_node_append(*vars, node);
 
-/*
-		u1 = ticonv_varname_to_utf8(handle->model, ((VarEntry *) (folder->data))->name, -1);
-		u2 = ticonv_varname_to_utf8(handle->model, ve->name, ve->type);
-			g_snprintf(update_->text, sizeof(update_->text), _("Parsing %s/%s"), u1, u2);
-			g_free(u1); g_free(u2);
-			update_label();
-			*/
+		ticalcs_info(_("Name: %s | Type: %i | Attr: %i  | Size: %08X"), 
+			fe->name, 
+			fe->type,
+			fe->attr,
+			fe->size);
 	}
 
 	TRYF(cmd_s_dir_enum_done(handle));
 	TRYF(cmd_r_dir_enum_done(handle));
+
+	for(i = 0; i < (int)g_node_n_children(*vars); i++) 
+	{
+		GNode *folder = g_node_nth_child(*vars, i);
+		char *folder_name = ((VarEntry *) (folder->data))->name;
+		char *u1, *u2;
+
+		ticalcs_info(_("Directory listing in <%s>..."), folder_name);
+
+		TRYF(cmd_s_dir_enum_init(handle, folder_name));
+		TRYF(cmd_r_dir_enum_init(handle));
+
+		for(;;)
+		{
+			VarEntry *ve = tifiles_ve_create();
+			GNode *node;
+			char *ext;
+
+			TRYF(cmd_s_dir_enum_next(handle));
+			err = cmd_r_dir_enum_next(handle, varname, &varsize, &vartype);
+
+			if (err == ERR_EOT)
+				break;
+			else if (err != 0)
+				return err;
+		
+			ext = tifiles_fext_get(varname);
+			strcpy(ve->folder, folder_name);
+			ve->size = varsize;			
+			ve->type = tifiles_fext2vartype(CALC_NSPIRE, ext);
+			ve->attr = ATTRB_NONE;
+			if(ext) *(ext-1) = '\0';
+			strcpy(ve->name, varname);
+
+			node = g_node_new(ve);
+			folder = g_node_append(folder, node);
+
+			ticalcs_info(_("Name: %8s | Type: %8s | Attr: %i  | Size: %08X"), 
+				ve->name, 
+				tifiles_vartype2string(handle->model, ve->type),
+				ve->attr,
+				ve->size);
+
+			u1 = ticonv_varname_to_utf8(handle->model, ((VarEntry *) (folder->data))->name, -1);
+			u2 = ticonv_varname_to_utf8(handle->model, ve->name, ve->type);
+			g_snprintf(update_->text, sizeof(update_->text), _("Parsing %s/%s"), u1, u2);
+			g_free(u1); g_free(u2);
+			update_label();
+		}
+
+		TRYF(cmd_s_dir_enum_done(handle));
+		TRYF(cmd_r_dir_enum_done(handle));
+	}	
 
 	TRYC(nsp_session_close(handle));
 
